# gl2vid

./: .gitignore  CMakeLists.txt  README.md  gl2vid.c  gl2vid.h
glad/: glad.h
test/: CMakeLists.txt  test.c
